{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 44,
  "lineage": "be72a709-6ee5-e01d-ee25-2a1f9aa287dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-server-public-ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0d688e2261ad2b4fc",
            "domain": "vpc",
            "id": "eipalloc-052a2fbebda8c62b7",
            "instance": "i-03e1d2e09501a35c8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-021230f3bd6377c41",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-4-14-28.compute-1.amazonaws.com",
            "public_ip": "52.4.14.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-public-ip1"
            },
            "tags_all": {
              "Name": "development-public-ip1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.web-server-security-group-1",
            "aws_subnet.web-server-subnet-1",
            "aws_vpc.web-server-vpc-1",
            "aws_internet_gateway.web-server-internet-gateway-1",
            "aws_network_interface.web-server-network-interface1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-ubuntu1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:140905553182:instance/i-04a115fca467b252f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a115fca467b252f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-021230f3bd6377c41"
              }
            ],
            "primary_network_interface_id": "eni-021230f3bd6377c41",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "52.4.14.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f02b22606f27ea68",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044fe5ef9cc78a92f",
            "tags": {
              "Name": "development-ubuntu-instance-1",
              "Type": "web-server"
            },
            "tags_all": {
              "Name": "development-ubuntu-instance-1",
              "Type": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a961f4054cce0ea1"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-network-interface1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-server-internet-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140905553182:internet-gateway/igw-004eb4429267a1ba6",
            "id": "igw-004eb4429267a1ba6",
            "owner_id": "140905553182",
            "tags": {
              "Name": "development-webserver"
            },
            "tags_all": {
              "Name": "development-webserver"
            },
            "vpc_id": "vpc-04ec06e1a4d43c439"
          },
          "dependencies": [
            "aws_vpc.web-server-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-network-interface1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-021230f3bd6377c41",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:aa:b5:9e:2d:3f",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a961f4054cce0ea1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044fe5ef9cc78a92f",
            "tags": {
              "Name": "development-network-interface"
            },
            "tags_all": {
              "Name": "development-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.web-server-security-group-1",
            "aws_subnet.web-server-subnet-1",
            "aws_vpc.web-server-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-server-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140905553182:route-table/rtb-08017fb9cdfdfb995",
            "id": "rtb-08017fb9cdfdfb995",
            "owner_id": "140905553182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004eb4429267a1ba6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-webserver"
            },
            "tags_all": {
              "Name": "development-webserver"
            },
            "vpc_id": "vpc-04ec06e1a4d43c439"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-server-internet-gateway-1",
            "aws_vpc.web-server-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-server-route-table-to-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cfd678a17a928c0",
            "route_table_id": "rtb-08017fb9cdfdfb995",
            "subnet_id": "subnet-044fe5ef9cc78a92f"
          },
          "dependencies": [
            "aws_internet_gateway.web-server-internet-gateway-1",
            "aws_route_table.web-server-route-table-1",
            "aws_subnet.web-server-subnet-1",
            "aws_vpc.web-server-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-server-security-group-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140905553182:security-group/sg-0a961f4054cce0ea1",
            "description": "allow web traffic 22, 80 and 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a961f4054cce0ea1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "FTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow web traffic",
            "name_prefix": "",
            "owner_id": "140905553182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "development-webserver"
            },
            "tags_all": {
              "Name": "development-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec06e1a4d43c439"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web-server-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-server-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140905553182:subnet/subnet-044fe5ef9cc78a92f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-044fe5ef9cc78a92f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140905553182",
            "tags": {
              "Name": "development-subnet"
            },
            "tags_all": {
              "Name": "development-subnet"
            },
            "vpc_id": "vpc-04ec06e1a4d43c439"
          },
          "dependencies": [
            "aws_vpc.web-server-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-server-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140905553182:vpc/vpc-04ec06e1a4d43c439",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013bc6c5de7118bd6",
            "default_route_table_id": "rtb-0f737e1188c154c1e",
            "default_security_group_id": "sg-089e6c305a4619b1d",
            "dhcp_options_id": "dopt-10110b6a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04ec06e1a4d43c439",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f737e1188c154c1e",
            "owner_id": "140905553182",
            "tags": {
              "Name": "development-webserver"
            },
            "tags_all": {
              "Name": "development-webserver"
            }
          }
        }
      ]
    }
  ]
}